# Kintsugi

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: __init__.py  main.py  worker.py
app/api/: router.py
app/api/endpoints/: webhook.py
app/core/: __init__.py  config.py  security.py
app/schemas/: config.py
app/services/: __init__.py  config_service.py  gemini_service.py  github_service.py  security_scanner.py  workflow_processor.py
debug_outputs/: gemini_output_1.txt  gemini_output_2.txt  gemini_output_3.txt
debug_prompts/: sent_prompt_1.txt  sent_prompt_2.txt  sent_prompt_3.txt
debug_videos/: video.webm
